# MDS-Backend

./: .gitignore  Cargo.toml  MDS-Backend.code-workspace  README.md
Document_Parser/: Cargo.toml
Document_Parser/src/: main.rs
PopulateDB/: Cargo.toml  populatedb_config.toml
PopulateDB/.sqlx/: query-1c46b61cefc4b7af8018296b4aa3e9a26b1cde1b1fa060a7181e60a3cfed4292.json  query-3529162067697572127619eb3efd49402da9e0bfef1824e9f66a08476ccee9bc.json  query-65618f02bb694dffba7983a4f0ddb9b666b16b5fcd254b93e587454e86654a51.json  query-a43cb4a894c7295d5338bb3afc06619b0ab50024954b25bcc74f7db0e0928ac0.json  query-b1c0c9807985bae44c4110b0c03a8324c38a00f82c59cd8f68fc411826a3e19b.json  query-c38b34611bcc429702939047fb946e0627b17ca411dcd7dc6ba5d67c91b5707a.json  query-c98aa6491f0fbfe3045ceb54830032f94dc1c7b80469d99bb1ee7344dccbe049.json  query-cc1874e651682a206dbd7ae0c6ae890660af9387072c9eb7593cf7f9bf47f07f.json  query-f91b5d01457bdc5aab7eae304041f0630a1eb63a3f359f4505c49a6d5b05a04b.json  query-f9601370508feb8265d8d1e43520b05282df1db1822955836010b30f26de9aa4.json
PopulateDB/src/: main.rs
Server/: Cargo.toml  Cross.toml  dockerfile  rustfmt.toml
Server/src/: main.rs
Server/static/: index.html  script.js
WebScraper/src/: main.rs
docs/: help.html  search-index.js  settings.html
docs/actix_server/: all.html  fn.index.html  fn.main.html  fn.query_meilisearch.html  fn.search.html  fn.transform_results.html  index.html  struct.PDFdoc.html  struct.SearchQueryWrapper.html  struct.SearchResults.html
src/: main.rs  pdf_parser.rs
static/: script.js
(+21 files in other folders)
