[package]
name = "populate-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "time" ] }
tokio = { version = "1.34.0", features = ["full"] }
rayon = "1.8.0"
chrono = "0.4.31"
rand = "0.8.5"
crossterm = "0.27.0"
clap = { version = "4.4.8", features = ["derive"] }
toml = "0.8.8"
serde = {version = "1.0.193", features = ["derive"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
