[package]
name = "populate-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
rayon = "1.8.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "time" ] }
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tui = "0.19.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
